# RadRisks

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.cjs
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: Ac224.rs  ingestion_coefficients.rs  inhalation_coefficients.rs  main.rs  survival.rs  types.rs  usage.rs
src-tauri/src/ingestion_coefficients/: ing_ac224.rs  ing_ac225.rs  ing_ac226.rs  ing_ac227.rs  ing_ac228.rs  ing_ag102.rs  ing_ag103.rs  ing_ag104.rs  ing_ag104m.rs  ing_ag105.rs  ing_ag106.rs  ing_ag106m.rs  ing_ag108m.rs  ing_ag110m.rs  ing_ag111.rs  ing_ag112.rs  ing_ag115.rs  ing_al26.rs  ing_am237.rs  ing_am238.rs  ing_am239.rs  ing_am240.rs  ing_am241.rs  ing_am242.rs  ing_am242m.rs  ing_am243.rs  ing_am244.rs  ing_am244m.rs  ing_am245.rs  ing_am246.rs  ing_am246m.rs  ing_as69.rs  ing_as70.rs  ing_as71.rs  ing_as72.rs  ing_as73.rs  ing_as74.rs  ing_as76.rs  ing_as77.rs  ing_as78.rs  (+693 more)
src-tauri/src/inhalation_coefficients/: inh_ac224.rs  inh_ac225.rs  inh_ac226.rs  inh_ac227.rs  inh_ac228.rs  inh_ag102.rs  inh_ag103.rs  inh_ag104.rs  inh_ag104m.rs  inh_ag105.rs  inh_ag106.rs  inh_ag106m.rs  inh_ag108m.rs  inh_ag110m.rs  inh_ag111.rs  inh_ag112.rs  inh_ag115.rs  inh_al26.rs  inh_am237.rs  inh_am238.rs  inh_am239.rs  inh_am240.rs  inh_am241.rs  inh_am242.rs  inh_am242m.rs  inh_am243.rs  inh_am244.rs  inh_am244m.rs  inh_am245.rs  inh_am246.rs  inh_am246m.rs  inh_as69.rs  inh_as70.rs  inh_as71.rs  inh_as72.rs  inh_as73.rs  inh_as74.rs  inh_as76.rs  inh_as77.rs  inh_as78.rs  (+693 more)
(+39 files in other folders)
